@@ -21,6 +21,11 @@ for X in ${LANGS}; do
 done
 
 
+# Not ideal, especially with the modularized way : some packages need only
+# texlive-core, ie, the binaries, some other use virtual/tetex to have
+# a fully working latex installation to compile some .tex files...
+PROVIDE="virtual/tetex"
+
 
 TEXLIVE_CAT="dev-texlive"
 
